[gd_scene load_steps=19 format=3 uid="uid://cj0kukippqk1p"]

[ext_resource type="Script" path="res://scripts/UI/base_paralax2.gd" id="1_oglla"]
[ext_resource type="Texture2D" uid="uid://cyo0xp141heyj" path="res://asset/Tileset/hca.png" id="2_7pxsv"]
[ext_resource type="Texture2D" uid="uid://bsgg5lwuokmnt" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/mtn (z -4).png" id="3_vmt8j"]
[ext_resource type="Texture2D" uid="uid://wt4k7gswsl8k" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/sky (z -3).png" id="4_3vo3w"]
[ext_resource type="Texture2D" uid="uid://dgboygq2gyn8l" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/bg_2 (z -2).png" id="5_xwc0x"]
[ext_resource type="Texture2D" uid="uid://ftjdsb2ldgg8" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/bg_1 (z -1).png" id="6_4lgdj"]
[ext_resource type="Script" path="res://scripts/UI/front_paralax2.gd" id="7_t6q5v"]
[ext_resource type="Texture2D" uid="uid://bm2kmxva0vht1" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/middleground (z 0).png" id="8_boo8b"]
[ext_resource type="Texture2D" uid="uid://1c78nr4twjv" path="res://asset/Paralax/Glitch parallex BG sampler/GA9NRNJSB792OG4 Akaki Cape-shows depth/middleplus (z 1).png" id="9_t3kpr"]
[ext_resource type="FontFile" uid="uid://cp8xob43orb1" path="res://asset/fonts/PixelOperator8.ttf" id="10_fes6e"]
[ext_resource type="FontFile" uid="uid://d4c2lgu2lrqhi" path="res://asset/fonts/PixelOperator8-Bold.ttf" id="11_wmuhn"]
[ext_resource type="Script" path="res://scripts/UI/levelselect/historyselect.gd" id="12_hv2hb"]
[ext_resource type="PackedScene" uid="uid://v83lvt5m3e12" path="res://scenes/UI/levelselect/history_icon.tscn" id="13_3niy1"]
[ext_resource type="PackedScene" uid="uid://dph1mgrxsommr" path="res://scenes/UI/levelselect/player_icon.tscn" id="13_soljb"]
[ext_resource type="Texture2D" uid="uid://d0v1r4bprnhdp" path="res://asset/GUI/kenney_onscreen-controls/Sprites/flat-light/flatLight47.png" id="14_xy8qm"]
[ext_resource type="Texture2D" uid="uid://btfmegwpc3d07" path="res://asset/GUI/kenney_onscreen-controls/Sprites/flat-dark/flatDark48.png" id="15_wvvet"]
[ext_resource type="PackedScene" uid="uid://cqas3f3vaheuy" path="res://scenes/UI/in_game_ui.tscn" id="16_22p2g"]
[ext_resource type="AudioStream" uid="uid://ydld3604qu6d" path="res://asset/music/krus_festival.mp3" id="18_4hw3x"]

[node name="history_select" type="Node2D" groups=["Level_Select"]]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="base_paralax" type="ParallaxBackground" parent="CanvasLayer"]
scroll_ignore_camera_zoom = true
script = ExtResource("1_oglla")

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
position = Vector2(-34, -101)
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer"]
position = Vector2(34, 101)
scale = Vector2(0.787208, 0.757202)
texture = ExtResource("2_7pxsv")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer2"]
position = Vector2(-654, 48)
scale = Vector2(1.48892, 1.85114)
texture = ExtResource("3_vmt8j")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer3"]
position = Vector2(-2833, 2)
scale = Vector2(1, 1.19236)
texture = ExtResource("4_3vo3w")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer4"]
position = Vector2(1960, 422.75)
scale = Vector2(1.12643, 1.2168)
texture = ExtResource("5_xwc0x")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="CanvasLayer/base_paralax"]
visible = false
position = Vector2(-34, -101)
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/base_paralax/ParallaxLayer5"]
position = Vector2(1676, 452)
texture = ExtResource("6_4lgdj")

[node name="front_paralax" type="ParallaxBackground" parent="CanvasLayer"]
layer = 0
visible = false
scroll_ignore_camera_zoom = true
script = ExtResource("7_t6q5v")

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/front_paralax"]
position = Vector2(-34, -101)
motion_scale = Vector2(3, 3)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/front_paralax/ParallaxLayer"]
position = Vector2(-3077, -21.9999)
scale = Vector2(0.764322, 0.698955)
texture = ExtResource("8_boo8b")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/front_paralax"]
position = Vector2(-34, -101)
motion_scale = Vector2(3, 3)
motion_mirroring = Vector2(5000, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/front_paralax/ParallaxLayer2"]
position = Vector2(-229, 146)
texture = ExtResource("9_t3kpr")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 32.0
offset_top = 32.0
offset_right = 1248.0
offset_bottom = 704.0
color = Color(0.517647, 0.517647, 0.517647, 0.501961)

[node name="Texts" type="Node" parent="CanvasLayer"]

[node name="Title" type="Label" parent="CanvasLayer/Texts"]
offset_left = 352.0
offset_top = 64.0
offset_right = 1000.0
offset_bottom = 128.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 32
text = "REVISIT UNLOCKED HISTORY"

[node name="decs1" type="Label" parent="CanvasLayer/Texts"]
offset_left = 192.0
offset_top = 192.0
offset_right = 840.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang \"RIO DE STA ANA\""

[node name="decs2" type="Label" parent="CanvasLayer/Texts"]
offset_left = 192.0
offset_top = 320.0
offset_right = 840.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang \"Encuentros De Santa Ana\""

[node name="decs3" type="Label" parent="CanvasLayer/Texts"]
offset_left = 192.0
offset_top = 448.0
offset_right = 840.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang nawawalang puno
at halaman ng Santa
Ana"

[node name="decs4" type="Label" parent="CanvasLayer/Texts"]
offset_left = 192.0
offset_top = 576.0
offset_right = 840.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang kwento ni Padre Vinancio Samson
patungkol sa Bayan at Parokya"

[node name="decs5" type="Label" parent="CanvasLayer/Texts"]
offset_left = 768.0
offset_top = 192.0
offset_right = 1416.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang Bayan ng Santa Ana 
Pampanga at ang Parokya"

[node name="decs6" type="Label" parent="CanvasLayer/Texts"]
offset_left = 768.0
offset_top = 320.0
offset_right = 1416.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Santa Ana! ang ika 21 na 
munisipalidad ng Pampanga"

[node name="decs7" type="Label" parent="CanvasLayer/Texts"]
offset_left = 768.0
offset_top = 448.0
offset_right = 1416.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang Lumang katawagan ng 
14 barrio ng Santa Ana "

[node name="decs8" type="Label" parent="CanvasLayer/Texts"]
offset_left = 768.0
offset_top = 576.0
offset_right = 1416.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("10_fes6e")
theme_override_font_sizes/font_size = 16
text = "Ang kultura at kasaysayan ng 
kasalukuyang Santa Ana"

[node name="unlock_level" type="Label" parent="CanvasLayer/Texts"]
offset_left = 64.0
offset_top = 640.0
offset_right = 1220.0
offset_bottom = 672.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("11_wmuhn")
theme_override_font_sizes/font_size = 32
text = "YOU MUST FINISH THIS CURRENT LEVEL FIRST"

[node name="historyselect" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_hv2hb")

[node name="history_icon" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 128.0
offset_top = 160.0
offset_right = 192.0
offset_bottom = 224.0

[node name="history_icon2" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 128.0
offset_top = 288.0
offset_right = 192.0
offset_bottom = 352.0

[node name="history_icon3" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 128.0
offset_top = 416.0
offset_right = 192.0
offset_bottom = 480.0

[node name="history_icon4" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 128.0
offset_top = 544.0
offset_right = 192.0
offset_bottom = 608.0

[node name="history_icon5" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 704.0
offset_top = 160.0
offset_right = 768.0
offset_bottom = 224.0

[node name="history_icon6" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 704.0
offset_top = 288.0
offset_right = 768.0
offset_bottom = 352.0

[node name="history_icon7" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 704.0
offset_top = 416.0
offset_right = 768.0
offset_bottom = 480.0

[node name="history_icon8" parent="CanvasLayer/historyselect" instance=ExtResource("13_3niy1")]
offset_left = 704.0
offset_top = 544.0
offset_right = 768.0
offset_bottom = 608.0

[node name="player_icon" parent="CanvasLayer/historyselect" instance=ExtResource("13_soljb")]
position = Vector2(128, 160)
scale = Vector2(2, 2)

[node name="back" type="TouchScreenButton" parent="CanvasLayer/historyselect"]
position = Vector2(64, 64)
texture_normal = ExtResource("14_xy8qm")
texture_pressed = ExtResource("15_wvvet")

[node name="android_controls" type="CanvasLayer" parent="."]
layer = 127

[node name="InGameUI" parent="android_controls" instance=ExtResource("16_22p2g")]
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_4hw3x")
autoplay = true

[connection signal="pressed" from="CanvasLayer/historyselect/back" to="CanvasLayer/historyselect" method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="CanvasLayer/historyselect" method="_on_timer_timeout"]
